Bug 88910 - [BYT bisected] igt/pm_rpm/debugfs-read cause dmesg warn
Summary: [BYT bisected] igt/pm_rpm/debugfs-read cause dmesg warn
Status: CLOSED FIXED
Alias: None
Product: DRI
Classification: Unclassified
Component: DRM/Intel (show other bugs)
Version: DRI git
Hardware: Other All
: high normal
Assignee: Mika Kuoppala
QA Contact: Intel GFX Bugs mailing list
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-02-02 06:40 UTC by Ding Heng
Modified: 2017-09-04 10:28 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments
dmesg for case igt/pm_rpm/debugfs-read (48.90 KB, text/plain)
2015-02-02 06:40 UTC, Ding Heng
no flags Details
drm/i915: Take runtime pm reference on hangcheck_info (3.01 KB, patch)
2015-02-03 18:20 UTC, Mika Kuoppala
no flags Details | Splinter Review

Description Ding Heng 2015-02-02 06:40:28 UTC
Created attachment 113033 [details]
dmesg for case igt/pm_rpm/debugfs-read

==System Environment==
--------------------------
Regression: yes
Non-working platforms:  BYT
==kernel==
--------------------------
drm-intel-nightly/8b4216f91c7bf8d3459cadf9480116220bd6545e(2015-02-02)


==Bug detailed description==
-----------------------------
igt/pm_rpm/debugfs-read case success, but there is dmesg warn after run this case:
 dmesg -r |grep '<[1-4]>'|grep drm
<4>[   77.979409] WARNING: CPU: 1 PID: 4003 at drivers/gpu/drm/i915/intel_uncore.c:69 assert_device_not_suspended+0x45/0x5b [i915]()
<4>[   77.979414] Modules linked in: dm_mod snd_hda_codec_hdmi iTCO_wdt iTCO_vendor_support snd_hda_codec_realtek snd_hda_codec_generic serio_raw pcspkr i2c_i801 snd_hda_intel lpc_ich snd_hda_controller mfd_core snd_hda_codec snd_hwdep snd_pcm snd_timer snd soundcore battery ac acpi_cpufreq i915 button video drm_kms_helper drm cfbfillrect cfbimgblt cfbcopyarea
<4>[   77.979444] CPU: 1 PID: 4003 Comm: pm_rpm Not tainted 3.19.0-rc6_drm-intel-nightly_8b4216_20150202+ #126
<3>[   77.992738] [drm:vlv_check_no_gt_access [i915]] *ERROR* GT register access while GT waking disabled

==Reproduce steps==
---------------------------- 
1. ./pm_rpm --run-subtest debugfs-read
Comment 1 Ding Heng 2015-02-02 06:41:54 UTC
f654449a28e9cce283d6e3ef22c31fe7d865dff5 is the first bad commit.
commit f654449a28e9cce283d6e3ef22c31fe7d865dff5
Author:     Chris Wilson <chris@chris-wilson.co.uk>
AuthorDate: Mon Jan 26 18:03:04 2015 +0200
Commit:     Daniel Vetter <daniel.vetter@ffwll.ch>
CommitDate: Wed Jan 28 17:22:27 2015 +0100

    drm/i915: Display current hangcheck status in debugfs
    
    For example,
    
    /sys/kernel/debug/dri/0/i915_hangcheck_info:
    
    Hangcheck active, fires in 15887800ms
    render ring:
            seqno = -4059 [current -583]
            action = 2
            score = 0
            ACTHD = 1ee8 [current 21f980]
            max ACTHD = 0
    
    v2: Include expiration ETA. Can anyone spot a problem?
    v3: Convert for workqueued hangcheck (Mika)
    v4: Print seqnos as unsigned ints (Ville)
    v5: Print seqnos as hex (Chris)
    
    Tested-By: PRC QA PRTS (Patch Regression Test System Contact: shuang.he@intel.com) (v2)
    Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk> (v2)
    Signed-off-by: Mika Kuoppala <mika.kuoppala@intel.com>
    Signed-off-by: Daniel Vetter <daniel.vetter@ffwll.ch
Comment 2 Chris Wilson 2015-02-02 09:23:19 UTC
Close, but the bisect is wrong... Can you look at why the bisect went wrong, reproduction here should have been 100%?
Comment 3 Ding Heng 2015-02-03 02:36:33 UTC
(In reply to Chris Wilson from comment #2)
> Close, but the bisect is wrong... Can you look at why the bisect went wrong,
> reproduction here should have been 100%?


I use this kernel commit run the same case 10 times, everytime I can get the following error in dmesg:
root@x-byt06:~# dmesg -r | egrep "<[1-4]>" |grep drm
<3>[  222.289443] [drm:vlv_check_no_gt_access [i915]] *ERROR* GT register access while GT waking disabled
<3>[  267.371300] [drm:vlv_check_no_gt_access [i915]] *ERROR* GT register access while GT waking disabled
<3>[  317.469940] [drm:vlv_check_no_gt_access [i915]] *ERROR* GT register access while GT waking disabled
root@x-byt06:~# dmesg -r | egrep "<[1-4]>" |grep drm
<3>[  317.469940] [drm:vlv_check_no_gt_access [i915]] *ERROR* GT register access while GT waking disabled
<3>[  370.552391] [drm:vlv_check_no_gt_access [i915]] *ERROR* GT register access while GT waking disabled
root@x-byt06:~# dmesg |grep vlv_check_no_gt_access
[  317.469940] [drm:vlv_check_no_gt_access [i915]] *ERROR* GT register access while GT waking disabled
[  370.552391] [drm:vlv_check_no_gt_access [i915]] *ERROR* GT register access while GT waking disabled
[  402.651940] [drm:vlv_check_no_gt_access [i915]] *ERROR* GT register access while GT waking disabled

I noticed that the error message will disappear about every 1 minute.

On the other hand, I use git log --first-parent f654449a28e9cce283d6e3ef22c31fe7d865dff5 and find out its parent commit:
737b1506037788f1e01b2a4c5795d4180b2e2e00.

I didn't see this issue on this commit.
Comment 4 Mika Kuoppala 2015-02-03 18:20:01 UTC
Created attachment 113131 [details] [review]
drm/i915: Take runtime pm reference on hangcheck_info
Comment 5 Ding Heng 2015-02-04 02:16:35 UTC
(In reply to Mika Kuoppala from comment #4)
> Created attachment 113131 [details] [review] [review]
drm/i915: Take runtime pm
> reference on hangcheck_info

I had check this patch on commit 8b4216f91c7bf8d3459cadf9480116220bd6545e.
change state to verified.
Comment 6 Jani Nikula 2015-02-04 12:51:35 UTC
Please do not close bugs before the fixes have been merged to drm-intel repositories.
Comment 7 Gordon Jin 2015-02-09 03:04:42 UTC
according to comment#3, it sounds like a valid bisect.
Chris, can you explain why you believe the bisect is wrong?
Comment 8 Jani Nikula 2015-02-09 12:30:57 UTC
commit ebbc7546d2099c94ff2ea940ae5ce740e512a66d
Author: Mika Kuoppala <mika.kuoppala@linux.intel.com>
Date:   Thu Feb 5 18:41:48 2015 +0200

    drm/i915: Take runtime pm reference on hangcheck_info

in drm-intel-next-fixes
Comment 9 Ding Heng 2015-02-10 02:06:17 UTC
(In reply to Jani Nikula from comment #8)
> commit ebbc7546d2099c94ff2ea940ae5ce740e512a66d
Author: Mika Kuoppala
> <mika.kuoppala@linux.intel.com>
Date:   Thu Feb 5 18:41:48 2015 +0200

   
> drm/i915: Take runtime pm reference on hangcheck_info

in
> drm-intel-next-fixes

Test pass on this commit. Change state to verified.
Comment 10 Jari Tahvanainen 2017-09-04 10:28:39 UTC
Closing old verified+fixed.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.